[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/stage.gd" type="Script" id=1]
[ext_resource path="res://components/background/background-controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/desk.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/scrolling-camera.tscn" type="PackedScene" id=5]

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundController" parent="." instance=ExtResource( 2 )]

[node name="YSort" type="YSort" parent="."]

[node name="Desk1" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -225, 117 )

[node name="Desk2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 225.272, -34 )

[node name="Desk3" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -134, -34 )

[node name="Desk4" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 217, 221 )

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -53.7597, 25.9555 )

[node name="ScrollingCamera" parent="YSort/Player" instance=ExtResource( 5 )]
current = true

[connection signal="moved" from="YSort/Player" to="." method="_on_Player_moved"]
